--- a/package.json
+++ b/package.json
@@ -12,37 +12,46 @@
     "@aws-sdk/client-s3": "^3.893.0",
     "@aws-sdk/s3-request-presigner": "^3.893.0",
     "@azure/msal-browser": "^4.23.0",
-    "@azure/msal-node": "^3.7.4",
-    "@hookform/resolvers": "^5.2.2",
+    "@azure/msal-node": "^2.15.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.9.0",
-    "@supabase/supabase-js": "^2.57.4",
+    "@supabase/supabase-js": "^2.45.4",
     "@types/archiver": "^6.0.3",
-    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node-cron": "^3.0.11",
     "archiver": "^7.0.1",
-    "aws-sdk": "2.1692.0",
-    "axios": "^1.12.2",
-    "bcryptjs": "^3.0.2",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "form-data": "^4.0.4",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.1",
+    "isomorphic-dompurify": "^2.16.0",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.544.0",
-    "next": "14.2.3",
+    "lucide-react": "^0.446.0",
+    "next": "14.2.13",
     "node-cron": "^4.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.62.0",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.2.0",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.1.9"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
